tests/archived/snapshots/credential@issuer:deferred.snap
---
source: tests/wallet.rs
assertion_line: 184
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://credibil.io/credentials/v1"
id: "http://credibil.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Credibil employee ID credential
  "@language": en-NZ
issuer: "http://credibil.io"
credentialSubject:
  address:
    locality: Wellington
    street_address: 123 Fake St
  email: pending.user@example.com
  family_name: Person
  given_name: Pending
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
validFrom: "[validFrom]"
