tests/archived/snapshots/credential_offer:request_jwt:response.snap
---
source: tests/credential_offer.rs
assertion_line: 42
expression: offer_resp
---
credential_offer:
  credential_issuer: "http://credibil.io"
  credential_configuration_ids:
    - EmployeeID_W3C_VC
  grants:
    "urn:ietf:params:oauth:grant-type:pre-authorized_code":
      pre-authorized_code: "[pre-authorized_code]"
      tx_code:
        input_mode: numeric
        length: 6
        description: Please provide the one-time code received
