tests/archived/snapshots/metadata:metadata_ok:response.snap
---
source: tests/metadata.rs
assertion_line: 21
expression: response
---
credential_issuer: "http://credibil.io"
credential_endpoint: "http://credibil.io/credential"
deferred_credential_endpoint: "http://credibil.io/deferred"
display:
  name: Credibil
  locale: en-NZ
credential_configurations_supported:
  Developer_W3C_VC:
    format: jwt_vc_json
    credential_definition:
      type:
        - VerifiableCredential
        - DeveloperCredential
      credentialSubject:
        family_name:
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
        proficiency:
          mandatory: true
          value_type: number
          display:
            - name: Proficiency
              locale: en-NZ
    scope: DeveloperCredential
    cryptographic_binding_methods_supported:
      - "did:key"
      - "did:web"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Developer
        locale: en-NZ
        logo:
          uri: "http://credibil.io/assets/developer.png"
          alt_text: Developer Logo
        description: Credibil certified developer credential
        background_color: "#010100"
        background_image:
          uri: "http://credibil.io/assets/developer-background.png"
          alt_text: Developer Background
        text_color: "#ffffff"
  EmployeeID_W3C_VC:
    format: jwt_vc_json
    credential_definition:
      type:
        - VerifiableCredential
        - EmployeeIDCredential
      credentialSubject:
        address:
          country:
            value_type: string
            display:
              - name: Country
                locale: en-NZ
          locality:
            value_type: string
            display:
              - name: Locality
                locale: en-NZ
          region:
            value_type: string
            display:
              - name: Region
                locale: en-NZ
          street_address:
            value_type: string
            display:
              - name: Street Address
                locale: en-NZ
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        family_name:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
    scope: EmployeeIDCredential
    cryptographic_binding_methods_supported:
      - "did:key"
      - "did:web"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          uri: "http://credibil.io/assets/employee.png"
          alt_text: Employee ID Logo
        description: Credibil employee ID credential
        background_color: "#323ed2"
        background_image:
          uri: "http://credibil.io/assets/employee-background.png"
          alt_text: Employee ID Background
        text_color: "#ffffff"
  org.iso.18013.5.1.mDL:
    format: mso_mdoc
    doctype: org.iso.18013.5.1.mDL
    claims:
      org.iso.18013.5.1:
        email:
          mandatory: true
          value_type: string
          display:
            - name: Email
              locale: en-NZ
        family_name:
          mandatory: true
          value_type: string
          display:
            - name: Family name
              locale: en-NZ
        given_name:
          mandatory: true
          value_type: string
          display:
            - name: Given name
              locale: en-NZ
      org.iso.18013.5.1.aamva:
        organ_donor: {}
    scope: DriverLicence
    cryptographic_binding_methods_supported:
      - "did:key"
      - "did:web"
    credential_signing_alg_values_supported:
      - ES256K
      - EdDSA
    proof_types_supported:
      jwt:
        proof_signing_alg_values_supported:
          - ES256K
          - EdDSA
    display:
      - name: Employee ID
        locale: en-NZ
        logo:
          uri: "http://credibil.io/assets/employee.png"
          alt_text: Employee ID Logo
        description: Credibil employee ID credential
        background_color: "#323ed2"
        background_image:
          uri: "http://credibil.io/assets/employee-background.png"
          alt_text: Employee ID Background
        text_color: "#ffffff"
