tests/archived/snapshots/par:request:response.snap
---
source: tests/par.rs
assertion_line: 47
expression: response
---
request_uri: "[request_uri]"
expires_in: 600
